# agentpipe

./: .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  STATE.md  prices.example.json  pyproject.toml  schema.sql
.github/workflows/: ci.yml
evals/: README.md
evals/cases/case-equality-email-buggy/: case.json  ticket.md
evals/cases/case-equality-email-fixed/: case.json
evals/cases/case-sort-names-buggy/: case.json  ticket.md
evals/cases/case-sort-names-fixed/: case.json
evals/cases/correct-and-complete/: case.json  ticket.md
evals/cases/false-block-implicit-raise/: case.json  ticket.md
evals/cases/false-pass-port-default/: case.json  ticket.md
evals/cases/fix-ellipsis-bug/: case.json  ticket.md
evals/cases/float-money-buggy/: case.json  ticket.md
evals/cases/float-money-fixed/: case.json
examples/: loop_demo.py
migrations/: 001_output_visibility.sql  002_store_content.sql  003_review_findings.sql  004_judge_evals.sql
plans/: layer5.md  layer6.md
src/agentpipe/: __init__.py  builder.py  checks.py  config.py  evals.py  evalstore.py  findings.py  fixer.py  judge.py  loop.py  pack.py  patch.py  preflight.py  repo.py  review.py  run.py  telemetry.py  test_repo.py  ticket.py
tests/: conftest.py  test_builder.py  test_checks.py  test_config.py  test_eval_store_contract.py  test_evals.py  test_finding_store_contract.py  test_findings.py  test_judge.py  test_loop.py  test_pack.py  test_patch.py  test_repo.py  test_review.py  test_review_fix.py  test_store_contract.py  test_telemetry.py  test_ticket.py
tickets/: TASK-1.md
(+37 files in other folders)
